app/styles/_shame.scss
/* ==========================================================================
   #SHAME
   Very specific css and temporary css.
   ========================================================================== */

/* todo: remove when appuniversum is updated with background options */
.au-o-region--alt {
  background: $au-gray-100;
}

// Temporary fix for ember-power-select offset searchbox issue (https://github.com/appuniversum/ember-appuniversum/issues/41)
body {
  overflow: hidden;
}

